--- a/StormWeb/Views/Client/Details.cshtml
+++ b/StormWeb/Views/Client/Details.cshtml
@@ -46,7 +46,7 @@
 
     <div class="display-label">Address</div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Address.Street_Name)
+        @Html.DisplayFor(model => model.Address.Address_Name)
     </div>
 
     <div class="display-label">Services</div>
