--- a/StormWeb/Views/Client/Register.cshtml
+++ b/StormWeb/Views/Client/Register.cshtml
@@ -226,7 +226,7 @@
                 required: true,
                 phoneNumber: true
             },
-            "AddressModel.Street_Name": {
+            "AddressModel.Address_Name": {
                 required: true
             },
             "AddressModel.Apartment_Number": {
@@ -500,7 +500,7 @@
                                         <div class="control-group">
                                             @Html.Label("Street Name and Number", null, new { @class = "control-label" })
                                             <div class="controls">
-                                                @Html.TextBox("AddressModel.Street_Name", "", new { @class = "input-xlarge text-tip",@onkeypress = "return alphanumeric_only(this);", placeholder = "Street Name" })
+                                                @Html.TextBox("AddressModel.Address_Name", "", new { @class = "input-xlarge text-tip",@onkeypress = "return alphanumeric_only(this);", placeholder = "Street Name" })
                                                 @Html.TextBox("AddressModel.Apartment_Number", "", new { placeholder = "Street Number", @class = "input-small" })
                                             </div>
                                         </div>
