--- a/StormWeb/Views/StaffCentre/Details.cshtml
+++ b/StormWeb/Views/StaffCentre/Details.cshtml
@@ -16,7 +16,7 @@
 
     <div class="display-label">Address</div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Address.Street_Name)
+        @Html.DisplayFor(model => model.Address.Address_Name)
     </div>
 
     <div class="display-label">Title</div>
