--- a/StormWeb/Views/Document/ShowAllStudents.cshtml
+++ b/StormWeb/Views/Document/ShowAllStudents.cshtml
@@ -127,6 +127,6 @@ $(function () {
         </div>
     </div>
     
-                
+ </div>               
 <a href=@Url.Action("ShowAllDocumentTemplates","Document")><i class="color-icons application_co"></i>Document Template</a>
 @*@Html.ActionLink("Document Template","CreateCourseSelection")*@
