--- a/StormWeb/Views/Shared/_LeftColumn.cshtml
+++ b/StormWeb/Views/Shared/_LeftColumn.cshtml
@@ -79,11 +79,7 @@
                    //------------end Documents ----------//
                    
                    //------------start Payment ----------//
-            <li><a href="#"><span class="white-icons documents"></span>Payments</a>
-                <ul class="acitem">
-                    <li><a href="@Url.Action("Index", "Payment")">List Of Unpaid Applications  </a></li>
-                </ul>
-            </li>
+            <li><a href="@Url.Action("Index", "Payment")"><span class="white-icons documents"></span>Payments</a> </li>
 
                     //------------end Payment ----------//
           
