--- a/StormWeb/Content/css/styles.css
+++ b/StormWeb/Content/css/styles.css
@@ -189,6 +189,7 @@ padding-left: 20px;
 	text-transform:uppercase;
 	font-size:11px;
 	font-weight:bold;
+	border-bottom: solid 1px black;
 }
 #side-accordion .nav-icon {
 	top:-2px;
