Fixed some text

--- a/StormWeb/Views/Client/AppointmentSuccess.cshtml
+++ b/StormWeb/Views/Client/AppointmentSuccess.cshtml
@@ -97,6 +97,7 @@
 				<ol>
 					<li>This is not an appointment confirmation, our staff will confirm your appointment shortly</li>
 					<li>Bring all relevant document with you to the branch on appointment date</li>
+                    <li>You will receive username and password after the appointment</li>
 				</ol>
 			</div>
             </div>
