--- a/StormWeb/Views/Shared/_LeftColumn.cshtml
+++ b/StormWeb/Views/Shared/_LeftColumn.cshtml
@@ -79,7 +79,7 @@
                    //------------end Documents ----------//
                    
                    //------------start Payment ----------//
-            <li><a href="@Url.Action("Index", "Payment")"><span class="white-icons documents"></span>Payments</a> </li>
+            <li><a href="@Url.Action("Index", "Payment")"><span class="white-icons money"></span>Payments</a> </li>
 
                     //------------end Payment ----------//
           
