--- a/StormWeb/Views/Document/Index.cshtml
+++ b/StormWeb/Views/Document/Index.cshtml
@@ -53,7 +53,10 @@
                                     <i class="color-icons application_double_co"></i>Applications
                                 </th>
                                 <th>
-                                    <i class="color-icons envelope_co"></i>Offer Letter/CoE
+                                    <i class="color-icons envelope_co"></i>Offer Letter
+                                </th>
+                                <th>
+                                    <i class="color-icons email_open_image_co"></i>CoE
                                 </th>
                                 <th>
                                     <i class="color-icons application_cascade_co"></i>Forms
@@ -112,45 +115,55 @@ foreach (var item in Model)
                                             }
                                         </td>
                                         <td>
+                                        
+                                            @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) >= 80)
+                                            {
+                                                <a href=@Url.Action("DownloadOfferLetter", "Document",new { id = item.Application_Result.FirstOrDefault().Application_Id })><span class="badge badge-success">Available</span></a>
+
+                                            }
+                                            else
+                                            {
+                                             <p style=" color:red; ">Not Available</p>
+                                            }
+                                        </td>
+
+
+                                        <td>
                                        
-                                            
-                                         @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 80)
-                                             {
-                                             <a href="#" class='white-icons download_to_computer tip-top' data-original-title="Download Offer Letter"></a>
-                                           
-                                             }  
-                                             
-                                        @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) > 80 && StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) <= 100)
-                                             {
-                                             <a href="#" class='white-icons download_to_computer tip-top' data-original-title="Download Offer Letter"></a>
-                                           <text>/</text>
-                                            <a href="#" class='white-icons download_to_computer tip-top' data-original-title="Download CoE Letter"></a>
-                                             }   
- 
+                                            @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) >= 90 && StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) <= 100)
+                                            {
+                                            <a href=@Url.Action("DownloadCoE", "Document", new { id = item.Application_Result.FirstOrDefault().Application_Id })><span class="badge badge-success">Available</span></a>
+
+                                            }
+                                            else
+                                            {
+                                             <p style=" color:red; ">Not Available</p>
+                                            }
+                                        
                                         </td>
 
                                         <td>
                                             <ul>
                                            @if (item.Completed == false || item.Completed == null)
                                            {
-                                                foreach (StormWeb.Models.Template_Document x in documentModel.tempDoc)
-                                                {
+                                               foreach (StormWeb.Models.Template_Document x in documentModel.tempDoc)
+                                               {
 
-                                                    StormWeb.Models.Application_Document appDoc = documentModel.getDocFromTemplate(x.TemplateDoc_Id);
+                                                   StormWeb.Models.Application_Document appDoc = documentModel.getDocFromTemplate(x.TemplateDoc_Id);
                                                     <li>@Html.DisplayFor(modelItem => x.Form_Name)
-                                                        <a href="@Url.Action("DownloadTempDoc", new { id = x.TemplateDoc_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                                        <a href="@Url.Action("DownloadTempDoc", new { id = x.TemplateDoc_Id })" class='black-icons download tip-top' data-original-title="Download">
                                                         </a></li>
-                                                }
+                                               }
                                            }
                                            else
                                            {
-                                                foreach (StormWeb.Models.Template_Document x in documentModel.tempDoc)
-                                                {
+                                               foreach (StormWeb.Models.Template_Document x in documentModel.tempDoc)
+                                               {
 
-                                                    StormWeb.Models.Application_Document appDoc = documentModel.getCompletedDocFromTemplate(x.TemplateDoc_Id);
+                                                   StormWeb.Models.Application_Document appDoc = documentModel.getCompletedDocFromTemplate(x.TemplateDoc_Id);
                                                     <li>@Html.DisplayFor(modelItem => appDoc.Template_Document.Form_Name)
                                                         </li>
-                                                }
+                                               }
 
                                            }
                                             </ul>
@@ -193,16 +206,16 @@ foreach (var item in Model)
 
                                                     StormWeb.Models.Application_Document appDoc = documentModel.getDocFromTemplate(x.TemplateDoc_Id);
 
-                                                        if (appDoc != null)
-                                                        {
+                                                    if (appDoc != null)
+                                                    {
                                  
                                                         <li>@Html.DisplayFor(modelItem => item.Date_Of_ApplicationStatus, "ShortDateTime")</li>
                                   
-                                                        }
-                                                        else
-                                                        {
+                                                    }
+                                                    else
+                                                    {
                                                         <li>&nbsp;</li>
-                                                        }
+                                                    }
                                                 }
                                             </ul>
                                         </td>
@@ -232,7 +245,7 @@ foreach (var item in Model)
 
                                                         if (appDoc == null)
                                                         {
-                                                        <li><a  href="@Url.Action("UploadCaseDoc", new { Doc_Id = item.Application_Id, Template_Id = x.TemplateDoc_Id, doctype = "ApplicationDocument", caseId = item.Case_Id })"   class='myFrame color-icons drive_cd_empty_co tip-top' data-original-title="Upload Document">
+                                                        <li><a  href="@Url.Action("UploadCaseDoc", new { Doc_Id = item.Application_Id, Template_Id = x.TemplateDoc_Id, doctype = "ApplicationDocument", caseId = item.Case_Id })"   class='myFrame black-icons upload tip-top' data-original-title="Upload Document">
                                                         </a></li>                                                    
                                                         }
                                                         else
@@ -242,7 +255,7 @@ foreach (var item in Model)
                                                         <li>
                                                             <div class="widget-content">
                                                                 <div class="widget-box">
-                                                                    <a href="@Url.Action("DownloadAppDoc", new { id = appDoc.ApplicationDoc_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                                                    <a href="@Url.Action("DownloadAppDoc", new { id = appDoc.ApplicationDoc_Id })" class='black-icons download tip-top' data-original-title="Download">
                                                                     </a>
                                                                     <a class="color-icons cross_co tip-top" data-original-title="Delete" data-toggle="modal"
                                                                              href="#myModal@(appDoc.ApplicationDoc_Id)"></a>
@@ -270,11 +283,14 @@ foreach (var item in Model)
                                                             }
                                                             else
                                                             {
+                                                            <li>
                                                             <div class="widget-content">
                                                                 <div class="widget-box">
-                                                                    <a href="@Url.Action("DownloadAppDoc", new { id = appDoc.ApplicationDoc_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download"></a>
+                                                                    <a href="@Url.Action("DownloadAppDoc", new { id = appDoc.ApplicationDoc_Id })" class='black-icons download tip-top' data-original-title="Download"></a>
+                                                                    
                                                               </div>
                                                             </div>
+                                                             </li>
                                                             }
                                                         }
 
@@ -421,7 +437,7 @@ foreach (StormWeb.Models.CaseDocument item in caseDoc)
                                                 }
                                                 else
                                                 {
-                                                 <a href="@Url.Action("DownloadCaseDocTemp", new { id = item.CaseDocTemplate_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                                 <a href="@Url.Action("DownloadCaseDocTemp", new { id = item.CaseDocTemplate_Id })" class='black-icons download tip-top' data-original-title="Download">
                                                     </a>
                                                 }
                                     </td>
@@ -446,7 +462,7 @@ foreach (StormWeb.Models.CaseDocument item in caseDoc)
                                        
                                             <div class="widget-content">
                                                 <div class="widget-box">
-                                                    <a href="@Url.Action("DownloadCaseDoc", new { id = item.CaseDocument_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                                    <a href="@Url.Action("DownloadCaseDoc", new { id = item.CaseDocument_Id })" class='black-icons download tip-top' data-original-title="Download">
                                                     </a><a class="color-icons cross_co tip-top" data-original-title="Delete" data-toggle="modal"
                                                         href="#myModal"></a>
                                                     <div class="modal hide fade" id="myModal" style="display: none;">
@@ -473,7 +489,7 @@ foreach (StormWeb.Models.CaseDocument item in caseDoc)
                                     }
                                     else
                                     {
-                                                     <a  href="@Url.Action("UploadCaseDoc", new { Doc_Id = item.Case_Id, Template_Id = item.CaseDocTemplate_Id, doctype = "CaseDocument", caseId = item.Case_Id })" class='myFrame color-icons drive_cd_empty_co tip-top' data-original-title="Upload">
+                                                     <a  href="@Url.Action("UploadCaseDoc", new { Doc_Id = item.Case_Id, Template_Id = item.CaseDocTemplate_Id, doctype = "CaseDocument", caseId = item.Case_Id })" class='myFrame black-icons upload tip-top' data-original-title="Upload">
                                                      </a>
 
                                     }
