--- a/StormWeb/Views/Document/StudentDetails.cshtml
+++ b/StormWeb/Views/Document/StudentDetails.cshtml
@@ -106,22 +106,27 @@
                                      <td>
                                             
                                                <ul>
+                                               @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) < 60)
+                                               {
+                                                     <p style=" color:red; ">Not Available</p>
+                                               }
+                                               
                                                 @* if application was submitted, upload offer letter will be shown *@
                                                 @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 60)
                                                 {
                                                        
                                                     <li>
-                                                    <a  href="@Url.Action("UploadOfferLetter", new { Doc_Id = item.Application_Id, case_Id = item.Case_Id, doctype = "OfferLetter", studentName = ViewBag.studentName })" class='myFrame color-icons drive_cd_empty_co tip-top' data-original-title="Upload Offer Letter">
+                                                    <a  href="@Url.Action("UploadOfferLetter", new { Doc_Id = item.Application_Id, case_Id = item.Case_Id, doctype = "OfferLetter", studentName = ViewBag.studentName })" class='myFrame black-icons upload tip-top' data-original-title="Upload Offer Letter">
                                                     </a>
                                                     </li>                                                    
-                                                    }
+                                                }
                                                     @* if application status is  "Offer_Letter", upload offer letter will be shown *@
                                                     @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 80)
                                                     {
                                                     <li>
                                                         <div class="widget-content">
                                                             <div class="widget-box">
-                                                                <a href="@Url.Action("DownloadOfferLetter", new { id = item.Application_Result.FirstOrDefault().Id })" class='white-icons download_to_computer tip-top' data-original-title="Download Offer Letter">
+                                                                <a href="@Url.Action("DownloadOfferLetter", new { id = item.Application_Result.FirstOrDefault().Id })" class='black-icons download tip-top' data-original-title="Download Offer Letter">
                                                                 </a>
                                                                 <a class="color-icons cross_co tip-top" data-original-title="Delete Offer Letter" data-toggle="modal"
                                                                          href="#myModal@(item.Application_Id)"></a>
@@ -150,12 +155,12 @@
 
                                                     </li>
                                                     }
-                                                    @if (item.Status == "CoE")
+                                                    @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 100)
                                                     {
                                                     <li>
                                                         <div class="widget-content">
                                                             <div class="widget-box">
-                                                                <a href="@Url.Action("DownloadOfferLetter", new { id = item.Application_Result.FirstOrDefault().Id })" class='white-icons download_to_computer tip-top' data-original-title="Download Offer Letter">
+                                                                <a href="@Url.Action("DownloadOfferLetter", new { id = item.Application_Result.FirstOrDefault().Application_Id })" class='black-icons download tip-top' data-original-title="Download Offer Letter">
                                                                 </a>
 
                                                             </div>
@@ -173,10 +178,10 @@
                                         <td>
                                             <ul>
                                                     
-                                            @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 80)
+                                            @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 90)
                                             {
                                                 <li>
-                                                <a  href="@Url.Action("UploadOfferLetter", new { Doc_Id = item.Application_Id, case_Id = item.Case_Id, doctype = "CoE", studentName = ViewBag.studentName })" class='myFrame color-icons drive_cd_empty_co tip-top' data-original-title="Upload CoE">
+                                                <a  href="@Url.Action("UploadOfferLetter", new { Doc_Id = item.Application_Id, case_Id = item.Case_Id, doctype = "CoE", studentName = ViewBag.studentName })" class='myFrame black-icons upload tip-top' data-original-title="Upload CoE">
                                                 </a>
 
                                                 </li>
@@ -184,12 +189,11 @@
                                             }
                                                         
                                             @if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) > 80 && StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) <= 100)
-
-                                                {
+                                            {
                                                 <li>
                                                 <div class="widget-content">
                                                     <div class="widget-box">
-                                                        <a href="@Url.Action("DownloadOfferLetter", new { id = item.Application_Result.FirstOrDefault().Id })" class='white-icons download_to_computer tip-top' data-original-title="Download CoE">
+                                                        <a href="@Url.Action("DownloadOfferLetter", new { id = item.Application_Result.FirstOrDefault().Id })" class='black-icons download tip-top' data-original-title="Download CoE">
                                                         </a>
                                                         <a class="color-icons cross_co tip-top" data-original-title="Delete" data-toggle="modal"
                                                                     href="#myModal@(item.Application_Id)"></a>
@@ -216,7 +220,11 @@
 
                                             </li>
 
-                                               }
+                                            }
+                                            else
+                                            {
+                                             <p style=" color:red; ">Not Available</p>
+                                            }
                                            </ul>
                                         </td>
 
@@ -228,7 +236,7 @@
 
                                         StormWeb.Models.Application_Document appDoc = documentModel.getDocFromTemplate(x.TemplateDoc_Id);
                                        <li>@Html.DisplayFor(modelItem => x.Form_Name)                                      
-                                       <a href="@Url.Action("DownloadTempDoc", new { id = x.TemplateDoc_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                       <a href="@Url.Action("DownloadTempDoc", new { id = x.TemplateDoc_Id })" class='black-icons download tip-top' data-original-title="Download">
                                        </a>
                                         </li>
                                     }
@@ -291,7 +299,7 @@
                                        else
                                        {
                                         <li>@Html.DisplayFor(modelItem => appDoc.FileName)
-                                        <a href="@Url.Action("DownloadAppDoc", new { id = appDoc.ApplicationDoc_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                        <a href="@Url.Action("DownloadAppDoc", new { id = appDoc.ApplicationDoc_Id })" class='black-icons download tip-top' data-original-title="Download">
                                         </a></li>
                                        }
                                    }
@@ -380,22 +388,22 @@
      if (caseDoc1 == null)
      {
          float progress1;
-             if (StormWeb.Helper.Utilities.countTotalCaseDocument(caseDoc1.FirstOrDefault().Case_Id) != 0)
-             {
-                 progress1 = @StormWeb.Models.ModelHelper.ProgressHelper.GetCountCaseUploads(caseDoc1.FirstOrDefault().Case_Id);
+         if (StormWeb.Helper.Utilities.countTotalCaseDocument(caseDoc1.FirstOrDefault().Case_Id) != 0)
+         {
+             progress1 = @StormWeb.Models.ModelHelper.ProgressHelper.GetCountCaseUploads(caseDoc1.FirstOrDefault().Case_Id);
                                     <h5>
                                         <i class="black-icons  documents"></i>General Documents ( @progress1% )
                                     </h5>
-             }
-             else
-             {
+         }
+         else
+         {
                                     <h5>
                                         <i class="black-icons  documents"></i>General Documents ( 0%)
                                     </h5>
 
-             }
+         }
 
-             }
+     }
                                  
              }    
                   <div class="widget-content">
@@ -437,7 +445,7 @@
                                                         }
                                                         else
                                                         {
-                                                         <a href="@Url.Action("DownloadCaseDocTemp", new { id = items.CaseDocTemplate_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                                         <a href="@Url.Action("DownloadCaseDocTemp", new { id = items.CaseDocTemplate_Id })" class='black-icons download tip-top' data-original-title="Download">
                                                             </a>
                                                         }
                                             </td>
@@ -456,7 +464,7 @@
                                             @if (!(items.UploadedOn == null))
                                             {
                                                             @Html.DisplayFor(modelItem => items.FileName)
-                                                            <a href="@Url.Action("DownloadCaseDoc", new { id = items.CaseDocument_Id })" class='white-icons download_to_computer tip-top' data-original-title="Download">
+                                                            <a href="@Url.Action("DownloadCaseDoc", new { id = items.CaseDocument_Id })" class='black-icons download tip-top' data-original-title="Download">
                                                             </a>
                                             }
                                             else
