--- a/StormWeb/Views/Payment/Edit.cshtml
+++ b/StormWeb/Views/Payment/Edit.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/Shared/_LayoutEmpty.cshtml";
 }
 
-<h2>Create New Payment Transaction</h2>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -13,16 +12,16 @@
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
-@*        <legend>Payment</legend>
-*@
-       
+        <legend>Modify Payment</legend>
 
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Application_Id)
+        <h4 style="color:blue;margin-left:20px;">
+            Student Name:@Model.Application.Student.Client.GivenName @Model.Application.Student.Client.LastName
+            <br/>
+            Course Name :@Model.Application.Course.Course_Name
+        </h4>
         
-        <div class="editor-field">
-             <input  id="Application_Id" type="hidden" value="@ViewBag.Application_Id" name="Application_Id" />
-            @Html.ValidationMessageFor(model => model.Application_Id)
-        </div>
-
         <div class="editor-label">
             @Html.LabelFor(model => model.Amount)
         </div>
@@ -34,12 +33,11 @@
         <div class="editor-label">
             @Html.LabelFor(model => model.Currency)
         </div>
-        @Html.DropDownListFor(model => model.Currency, (IEnumerable<SelectListItem>)ViewBag.curr)
-@*        <div class="editor-field">
+        <div class="editor-field">
             @Html.EditorFor(model => model.Currency)
             @Html.ValidationMessageFor(model => model.Currency)
         </div>
-*@
+
         <div class="editor-label">
             @Html.LabelFor(model => model.Receipt_No)
         </div>
@@ -51,7 +49,7 @@
         <div class="editor-label">
             @Html.LabelFor(model => model.Payment_Method)
         </div>
-        @Html.DropDownListFor(model => model.Payment_Method, (IEnumerable<SelectListItem>)ViewBag.PaymentMethod)
+         @Html.DropDownListFor(model => model.Payment_Method, (IEnumerable<SelectListItem>)ViewBag.PaymentMethod)
 @*        <div class="editor-field">
             @Html.EditorFor(model => model.Payment_Method)
             @Html.ValidationMessageFor(model => model.Payment_Method)
@@ -61,7 +59,7 @@
             @Html.LabelFor(model => model.Date_Of_Payment)
         </div>
         <div class="editor-field">
-             @Html.TextBoxFor(model => model.Date_Of_Payment, new { @class = "chooseDate1", @readonly = "readonly" })
+           @Html.TextBoxFor(model => model.Date_Of_Payment, new { @class = "chooseDate1", @readonly = "readonly" })
             @Html.ValidationMessageFor(model => model.Date_Of_Payment)
         </div>
 
@@ -74,13 +72,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Save" />
         </p>
     </fieldset>
 }
 
 <script type="text/javascript">
-   
+
     $(document).ready(function () {
         $(".chooseDate1").datepicker({
             dateFormat: 'mm/dd/yy',
